CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_INCLUDE_DIRECTORIES_PROJECT_BEFORE  true )

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
SET(CMAKE_USE_RELATIVE_PATHS  true )
FIND_PACKAGE(glib REQUIRED)
#INCLUDE_DIRECTORIES( /usr/include/liblog/)

#-fhosted 宿主环境编译 -D_REENTRANT 多线程可重入 -z defs在创建.so文件时禁止未定义的符号，以便在编译时而不是运行时捕获此问题
ADD_DEFINITIONS("-Wall -Wno-unused -g    -fhosted -D_REENTRANT -D_GNU_SOURCE  -z defs")

INCLUDE_DIRECTORIES( ${GLIB_INCLUDE_DIR}  )
INCLUDE_DIRECTORIES(${GLIB_PKG_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(/home/zzy/MpNetServer/iniparser/src)
LINK_DIRECTORIES(/home/zzy/MpNetServer/iniparser)
SET (EXTRA_LIBS ${EXTRA_LIBS} glib-2.0  dl  pthread  iniparser)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../bin)
AUX_SOURCE_DIRECTORY(./src/ SRC_LIST )
ADD_EXECUTABLE(server ${SRC_LIST} ) 
TARGET_LINK_LIBRARIES (server ${EXTRA_LIBS})
INSTALL (FILES  ./src/atomic.h DESTINATION  include/MpNetServer    )
INSTALL (FILES  ./src/config.h DESTINATION  include/MpNetServer    )
INSTALL (FILES  ./src/List.h DESTINATION  include/MpNetServer    )
INSTALL (FILES  ./src/tcp.h DESTINATION  include/MpNetServer    )
INSTALL (FILES  ./src/net_if.h DESTINATION  include/MpNetServer    )
INSTALL (FILES  ./src/service.h DESTINATION  include/MpNetServer    )
INSTALL (FILES  ./src/net.h DESTINATION  include/MpNetServer    )
INSTALL (FILES  ./src/bindconf.h DESTINATION  include/MpNetServer    )
INSTALL (FILES  ./src/daemon.h DESTINATION  include/MpNetServer    )
INSTALL (FILES  ./src/shmq.h DESTINATION  include/MpNetServer    )
INSTALL (FILES  ./src/dll.h DESTINATION  include/MpNetServer    )
INSTALL (FILES  ./src/log.h DESTINATION  include/MpNetServer    )
